2008-03-28  John Dallaway  <jld@ecoscentric.com>

	* tests/tm_basic.cxx: Rename test to tm_posix.cxx.
	* tests/mqueue1.c: Rename test to pmqueue1.c.
	* tests/mqueue2.c: Rename test to pmqueue2.c.
	* tests/mutex3.c: Rename test to pmutex3.c.
	* cdl/posix.cdl: Accommodate the above renaming. Test names must be
	globally unique.

2007-06-12  Richard.Yuan <lemonskin@tom.com>

	* src/except.cxx (install_handlers): Fixed typo. Bug #1000373
	
2006-07-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/signal.cxx (pause): Although already POSIX compliant, if we wait
	for all signals, behaviour is more Linux-like.

2006-06-13  Dan Jakubiec  <dan.jakubiec@systech.com>

	* src/time.cxx: (nanosleep): Fixed to return EINTR when it is
	interrupted by a signal.  This in turn fixed sleep() to return the
	number of unelapsed seconds when interrupted by a signal.

2006-06-12  Klaas Gadeyne  <klaas.gadeyne@fmtc.be>

	* src/pthread.cxx (pthread_create): name is only defined if
	CYGVAR_KERNEL_THREADS_NAME is set to 1

2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>
2005-10-18  Alexander Neundorf <neundorf@kde.org>

	* src/time.cxx: add gettimeofday() implementation
	* cdl/posix.cdl: make some descriptions a bit more verbose.  move
	mutex.cxx into its own component (CYGPKG_POSIX_PTHREAD_MUTEX).
	move compilation of mqueue.cxx into the CYGPKG_POSIX_MQUEUES
	component.  Fixed the tests so that only the ones which stand a
	chance of compling are compiled.
	* include/sys/time.h (new): Header file which implements sys/time.h 
	* include/pthread.h: Include time.h for struct timespec
	* include/mutex.h: Include time.h for struct timespec

2004-10-01  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* src/signal.cxx:  place the CYGBLD_ATTRIB_INIT_PRI such that it
	compiles for gcc 3.4.2 which is more picky about its placement.

2003-12-02  Sandeep  <sandeep@codito.com>

	* src/mqueue.cxx (new): define a placement new instead of using <new>

2003-11-19  Rickard Westman <rickard.westman@27m.se>
	